--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/estrela_de_rondonia.png
-  #   - images/a_dot_ham.jpeg
+     - assets/images/forte.jpeg
+     - assets/images/br-319.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
